# cveforge

./: .cveignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING  LICENSE  MANIFESTO.md  README.md  ROADMAP.md  SECURITY.md  __init__.py  __main__.py  entrypoint.py  forge.sh  manage.py  pyproject.toml
.github/workflows/: build.yml
.trunk/: trunk.yaml
ai/training/neural_network/: ascii_number_ident.py
assets/: help.md
assets/.install/: cveforge.desktop
assets/text_art/: cve_1.txt  cve_forge.txt  cve_forge_2.txt  cve_forge_4.txt  cve_forge_5.txt  cve_forge_6.txt  cve_forge_7.txt  cve_forge_8.txt  cve_large.txt  cve_large_1.txt  cybersecurity.txt  cybersecurity_3.txt  meme_smile.txt  python.txt  troll_face.txt  troll_face_3.txt
core/: context.py  io.py  sessions.py
core/commands/: command_types.py  exploits.py  graphic.py  run.py
core/commands/common/: __init__.py  download.py  file.py  sudo.py  test.py
core/commands/compression/: mathcom.py
core/commands/database/: __init__.py  initialize.py
core/commands/development/: scaffold.py
core/commands/network/: __init__.py  ping.py  smb.py
core/commands/os_placeholder/: main.py
core/commands/osint/: main.py
core/commands/privilege_escalation/: poison_exec.py  poison_exec_parser.py
core/commands/python/: __init__.py  install.py  parser.py  pip.py  pip_import.py  search.py  types.py
core/commands/security/: cve.py  ssh.py  surveillance.py
core/commands/ssh/: cve_2025_6018.py
core/commands/web/: brute_force.py  server.py
core/compression/: README.md  alpha.py  ber.py  beta.py  charlie.py  delta.py  flog.py  gamma.py  omega.py  power.py  process.py  roger.py  shaker.py  theta.py
core/compression/utils/: int.py
core/cryptography/: __init__.py
core/cryptography/rsa/: play.py
core/database/: base.py
core/database/models/: cve.py
core/database/types/: cve.py
core/http/server/: __main__.py
core/mathlang/: __init__.py
core/network/: __init__.py
core/network/forge/: README.md  __init__.py  base.py  socket.py
core/network/osi/: __init__.py  layer1.py  layer2.py  layer3.py  (+4 more)
core/process/: sudo.py
docs/architecture/: index.md
exploits/RFC/: README.md
playgrounds/juice-shop/: docker-compose.yml
scripts/: build.py  build_and_deploy.sh  build_and_run.sh  compile.sh  pythonpath_run.sh
src/cveforge/: .cveforge.toml  __init__.py  __main__.py  entrypoint.py
tests/: test_database.py  test_graphic.py  test_typing.py
tests/assets/: Registry.pol  smb.pcapng
typings/asgiref/: compatibility.pyi
typings/bip_utils/: __init__.pyi  _version.pyi
typings/daphne/: access.pyi  cli.pyi  endpoints.pyi  server.pyi  utils.pyi  ws_protocol.pyi
typings/stem/: __init__.pyi  connection.pyi  control.pyi  exit_policy.pyi  prereq.pyi  socket.pyi  version.pyi
typings/wordlist/: __init__.pyi  _util.pyi  wordlist.pyi
utils/: args.py  development.py  excel.py  graphic.py  module.py  network.py  sudo.py
web/cve_forge/: asgi.py  settings.py  wsgi.py
(+462 files in other folders)
