[project]
name = "cveforge"
version = "0.1.1"
description = "Framework that aim to enhance the developer experience for CVEs, malware, scans and reports. Aimed to Red and Blue cybersecurity teams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bip-utils>=2.10.0",
    "censys-platform>=0.11.0",
    "daphne>=4.2.1",
    "django>=5.2.8",
    "eth-account>=0.13.7",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "numpy>=2.3.5",
    "packaging>=25.0",
    "paramiko>=4.0.0",
    "pathspec>=0.12.1",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scapy>=2.6.1",
    "stem>=1.8.2",
    "typer>=0.20.0",
    "watchdog>=6.0.0",
    "xmltodict>=1.0.2",
]

[tool.setuptools]
package-data = {"cveforge" = [".cveforge.toml", ".cveignore", "assets/**"]}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cveforge = "cveforge.__main__:main"
